--- a/package.json
+++ b/package.json
@@ -96,12 +96,17 @@
     }
   },
   "dependencies": {
+    "@serialport/stream": "^12.0.0",
+    "@types/serialport": "^8.0.5",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.8",
+    "electron-store": "^10.0.0",
     "electron-updater": "^6.1.4",
+    "nodemailer": "^6.9.14",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "serialport": "^12.0.0"
   },
   "devDependencies": {
     "@electron/notarize": "^2.1.0",
@@ -111,8 +116,9 @@
     "@teamsupercell/typings-for-css-modules-loader": "^2.5.2",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/electron": "^1.6.10",
     "@types/jest": "^29.5.5",
-    "@types/node": "20.6.2",
+    "@types/node": "^20.6.2",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-test-renderer": "^18.0.1",
@@ -129,7 +135,7 @@
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
     "detect-port": "^1.5.1",
-    "electron": "^26.2.1",
+    "electron": "^26.6.10",
     "electron-builder": "^24.6.4",
     "electron-devtools-installer": "^3.2.0",
     "electronmon": "^2.0.2",
